# bonsai-turbo

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/assets/: compare.tex  overview.tex
infra/modal/: baseline.py  dev.py  texbuild.py
results/: summary.md
scripts/: analyze_trace.py  bench_baseline.sh  bench_ours.sh  build_vendor_fork.sh  compare_logits.py  fetch_weights.sh  make_table.py  math500.py  parity.sh  parity_prompts.txt  repro.sh  trace_baseline.sh
src/: gguf.cpp  gguf.h  model.cu  model.h  packs.cpp  packs.h  retile.cpp  retile.h
src/cuda/: attn.cu  attn.h  gdn.cu  gdn.h  gemv.cu  gemv.h  mega.cu  mega.h  ops.cu  ops.h
tests/: test_dequant.cpp  test_retile.cpp
tools/: bt_inspect.cpp  bt_microbench.cu  bt_run.cu  cupti_shim.c  launch_counter.c  vendor_logits.cpp  vendor_probe.cpp
